# kubeagent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/plans/: 00-master-plan.md  Phase-01_project-scaffold.md  Phase-02_cluster-context.md  Phase-03_k8s-executor-read-tools.md  Phase-04_k8s-write-tools-kubectl.md  Phase-05_llm-integration-agent-core.md  Phase-06_interactive-cli.md  Phase-07_prompt-engine-policy.md  Phase-08_memory-system.md  Phase-09_subagent-model-router.md  Phase-10_skill-hook-headless.md  Phase-11_plugin-system.md  Phase-12_mcp-server-ecosystem.md
docs/specs/: 2026-04-09-kubeagent-design.md
docs/superpowers/plans/: 2026-04-10-memory-system.md
docs/superpowers/specs/: 2026-04-10-memory-system-design.md  2026-04-13-distribution-design.md
homebrew/: kubeagent.rb
src/kubeagent/: __init__.py  __main__.py
src/kubeagent/agent/: agent.py  deps.py  memory.py  model.py  policy.py  prompt_engine.py  prompts.py  subagent.py
src/kubeagent/cli/: headless.py  main.py  output.py  repl.py  setup_wizard.py
src/kubeagent/config/: settings.py
src/kubeagent/hooks/: __init__.py  engine.py
src/kubeagent/infra/: cluster.py  executor.py  kubectl.py  model_router.py  storage.py
src/kubeagent/mcp/: __init__.py  (+2 more)
tests/unit/: test_cli.py  test_cluster.py  test_executor.py  test_phase04.py  test_phase05.py  test_phase06.py  test_phase07.py  test_phase08.py  test_phase09.py  test_phase10.py  test_phase11.py  test_phase12.py  test_tools.py
(+37 files in other folders)
